--- a/sk.altcam.assembly/.classpath
+++ b/sk.altcam.assembly/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/vpakan/jbds9000B2/studio/plugins/org.eclipse.jface_3.11.0.v20150602-1400.jar"/>
-	<classpathentry kind="lib" path="/home/vpakan/jbds9000B2/studio/plugins/org.eclipse.core.commands_3.7.0.v20150422-0725.jar"/>
-	<classpathentry kind="lib" path="/home/vpakan/jbds9000B2/studio/plugins/org.eclipse.swt.gtk.linux.x86_64_3.104.0.v20150528-0211.jar"/>
-	<classpathentry kind="lib" path="/home/vpakan/jbds9000B2/studio/plugins/org.eclipse.equinox.common_3.7.0.v20150402-1709.jar"/>
-	<classpathentry kind="lib" path="/home/vpakan/archive/install/seam/jboss-seam-2.3.0.Final/lib/dom4j.jar"/>
+	<classpathentry kind="lib" path="/opt/eclipse/eclipsemarsjee/plugins/org.eclipse.jface_3.11.1.v20160128-1644.jar"/>
+	<classpathentry kind="lib" path="/opt/eclipse/eclipsemarsjee/plugins/org.eclipse.core.commands_3.7.0.v20150422-0725.jar"/>
+	<classpathentry kind="lib" path="/opt/eclipse/eclipsemarsjee/plugins/org.eclipse.swt.gtk.linux.x86_64_3.104.2.v20160212-1350.jar"/>
+	<classpathentry kind="lib" path="/opt/eclipse/eclipsemarsjee/plugins/org.eclipse.equinox.common_3.7.0.v20150402-1709.jar"/>
+	<classpathentry kind="lib" path="/opt/jboss-as-7.1.1.Final/modules/org/dom4j/main/dom4j-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
